<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".registrarseActivity">

    <LinearLayout
        android:layout_width="326dp"
        android:layout_height="735dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_no_seleccionado"
                android:onClick="irIniciarSesion"
                android:text="@string/iniciar_sesion"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_selecionado"
                android:text="@string/registrarse"
                android:textColor="#000000"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginVertical="25dp"
            app:srcCompat="@drawable/logovet" />

        <TextView
            android:id="@+id/lblCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:text="@string/correo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblContraseña1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:text="@string/contraseña"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtContraseña1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/lblContraseña2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:text="@string/confirmar_contraseña"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtContraseña2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="0dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="#448AFF"
            android:onClick="crearCuenta"
            android:text="@string/crear_cuenta"
            android:textStyle="bold"
            app:backgroundTint="@null" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>